load.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-server-istio
spec:
  ports:
  # Use port name in "<protocol>[-<suffix>]" format, otherwise traffic
  # coming from istio nodes will silently ignore istio RouteRules.
  - name: grpc
    port: 8000
  selector:
    app: greeter-server-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-server-istio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greeter-server-istio
  template:
    metadata:
      labels:
        app: greeter-server-istio
    spec:
      containers:
      - name: greeter-server
        image: minddocasoto/greeter-server:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-client-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter-client-istio
  template:
    metadata:
      labels:
        app: greeter-client-istio
    spec:
      containers:
      - name: greeter-client
        image: minddocasoto/greeter-client:latest
