deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-grpc
          image: minddocasoto/grpc_test_client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server-grpc
          image: minddocasoto/grpc_test_server
          ports:
            - containerPort: 8000
              name: grpc
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server2
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server-grpc
          image: minddocasoto/grpc_test_server
          ports:
          - containerPort: 8000
            name: grpc
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  selector:
    app: server
  ports:
    - name: grpc
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: server
spec:
  host: grpc-server.apps-staging.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
  - grpc-server.apps-staging.svc.cluster.local
  http:
    - route:
      - destination:
          host: grpc-server.apps-staging.svc.cluster.local
          port:
            number: 8000
